# mcp-servers

./: .env  .gitignore  mcp.py  pyproject.toml  run.py  test.txt
app/: main.py
app/core/: config.py
app/handlers/: exception.py
app/routers/: __init__.py  time.py  weather.py
app/schemas/: response.py  time.py  weather.py
docker/: Dockerfile  README.md  docker-compose.yml  start.sh
